--- a/config/config.json
+++ b/config/config.json
@@ -9,6 +9,15 @@
     "fg_2": 81,
     "fg_3": 0,
     "fg_home": 251,
+    "segments" : {
+        "directory" : {
+            "max_count" : 3
+        },
+        "git" : {
+            "fg_master": 253,
+            "bg_master": 35
+        }
+    },
     "symbols": {
         "separator": "",
         "thin_separator": "",
